--- a/app/src/main/res/layout/fragment_shipping.xml
+++ b/app/src/main/res/layout/fragment_shipping.xml
@@ -129,10 +129,11 @@
             android:layout_width="318dp"
             android:paddingStart="0dp">
 
-                  <TextView
-                          android:padding="3dp"
-                      android:text="Feedback Star"
-                        android:textSize="18sp"/>
+            <TextView
+                android:layout_marginStart="10dp"
+                android:padding="3dp"
+                android:text="Feedback Star"
+                android:textSize="18sp" />
 
             <!--&lt;!&ndash;            <TextView&ndash;&gt;-->
             <!--&lt;!&ndash;                android:id="@+id/feedbackstar"&ndash;&gt;-->
@@ -144,6 +145,7 @@
                 android:id="@+id/feedbackstar"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:layout_marginStart="-180dp"
                 android:padding="0dp"
                 android:src="@drawable/star_circle" />
 
