--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
@@ -10,24 +11,38 @@
         android:orientation="vertical"
         android:padding="16dp">
 
-        <!-- ViewPager2 for Image Swiping -->
+<!--         ViewPager2 for Image Swiping -->
 
-        <!-- Indicator for ViewPager2 -->
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/imageViewPager"
-            android:layout_width="382dp"
-            android:layout_height="306dp" />
+<!--         Indicator for ViewPager2 -->
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <LinearLayout
-            android:id="@+id/indicatorLayout"
-            android:layout_width="174dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center_horizontal"
-            android:orientation="horizontal"
-            android:padding="4dp">
-            <!-- Indicators will be added programmatically -->
-        </LinearLayout>
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/imageViewPager"
+                android:layout_width="382dp"
+                android:layout_height="306dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="0dp"
+                android:layout_marginTop="0dp" />
+        </RelativeLayout>
+
+
+<!--        <LinearLayout-->
+<!--            android:id="@+id/indicatorLayout"-->
+<!--            android:layout_width="174dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="center_horizontal"-->
+<!--            android:gravity="center_horizontal"-->
+<!--            android:orientation="horizontal"-->
+<!--            android:padding="4dp">-->
+<!--            &lt;!&ndash; Indicators will be added programmatically &ndash;&gt;-->
+<!--        </LinearLayout>-->
+
+
+
+
 
         <!-- Title -->
         <TextView
