--- a/app/src/main/res/layout/item_similar.xml
+++ b/app/src/main/res/layout/item_similar.xml
@@ -18,7 +18,8 @@
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
     app:cardCornerRadius="4dp"
-    app:cardElevation="4dp">
+    app:cardElevation="4dp"
+        android:foreground="@drawable/card_background_selector">
 
     <LinearLayout
         android:layout_width="match_parent"
