--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -14,19 +14,30 @@
 <!--         ViewPager2 for Image Swiping -->
 
 <!--         Indicator for ViewPager2 -->
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+<!--        <RelativeLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent">-->
 
-            <androidx.viewpager2.widget.ViewPager2
-                android:id="@+id/imageViewPager"
-                android:layout_width="382dp"
-                android:layout_height="306dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginStart="0dp"
-                android:layout_marginTop="0dp" />
-        </RelativeLayout>
+<!--            <androidx.viewpager2.widget.ViewPager2-->
+<!--                android:id="@+id/imageViewPager"-->
+<!--                android:layout_width="382dp"-->
+<!--                android:layout_height="306dp"-->
+<!--                android:layout_alignParentStart="true"-->
+<!--                android:layout_alignParentTop="true"-->
+<!--                android:layout_marginStart="0dp"-->
+<!--                android:layout_marginTop="0dp" />-->
+<!--        </RelativeLayout>-->
+        <HorizontalScrollView
+            android:id="@+id/imageSlideView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:id="@+id/imageContainer"
+                android:layout_width="wrap_content"
+                android:layout_height="350dp"
+                android:orientation="horizontal" />
+        </HorizontalScrollView>
 
 
 <!--        <LinearLayout-->
