--- a/app/src/main/res/layout/item_image_card.xml
+++ b/app/src/main/res/layout/item_image_card.xml
@@ -9,6 +9,6 @@
         android:id="@+id/imageViewCard"
         android:layout_width="match_parent"
         android:layout_height="400dp"
-        android:scaleType="centerCrop" />
+        android:scaleType="fitCenter" />
 
 </androidx.cardview.widget.CardView>
