--- a/app/src/main/res/layout/item_similar.xml
+++ b/app/src/main/res/layout/item_similar.xml
@@ -32,7 +32,7 @@
             android:layout_width="0dp"
             android:layout_height="150dp"
             android:layout_weight="2"
-            android:scaleType="centerCrop" />
+            android:scaleType="fitCenter" />
 
         <LinearLayout
             android:layout_width="0dp"
