--- a/app/src/main/res/layout/fragment_wishlist.xml
+++ b/app/src/main/res/layout/fragment_wishlist.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -38,6 +39,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
+
     <TextView
         android:id="@+id/noResultsTextView"
         android:layout_width="360dp"
@@ -46,7 +48,7 @@
         android:elevation="4dp"
         android:gravity="center"
         android:padding="16dp"
-        android:text="No items found"
+        android:text="No items in the wishlist"
         android:textAppearance="?attr/textAppearanceListItem"
         android:textColor="@color/black"
         android:textStyle="bold"
@@ -55,6 +57,48 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/linearlayout"
+        android:layout_width="415dp"
+        android:layout_height="53dp"
+        android:visibility="gone"
+        android:layout_alignParentBottom="true"
+        android:background="@color/orange_icon"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <!-- First TextView -->
+
+        <!-- Second TextView -->
+
+        <!-- Third TextView -->
+        <TextView
+            android:id="@+id/text1"
+            android:layout_width="241dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="-70dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="Wishlist Total(2 items)"
+            android:textColor="#FFFFFF"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/text2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="$313"
+            android:textColor="#FFFFFF"
+            android:textSize="20sp" />
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
