--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -110,7 +110,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:padding="0dp"
-            android:text="Highlight 2" />
+            android:text="" />
 
         <!-- Horizontal Line before Specifications -->
         <View
