--- a/app/src/main/res/layout/fragment_similar.xml
+++ b/app/src/main/res/layout/fragment_similar.xml
@@ -35,6 +35,26 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
+<!--        <ProgressBar-->
+<!--            android:id="@+id/progressBar"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:visibility="gone"-->
+<!--            android:layout_gravity="center"-->
+<!--           />-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/searchProductsText"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:layout_marginTop="30dp"-->
+<!--            android:text="Fetching Products..."-->
+<!--            android:textAppearance="@style/TextAppearance.AppCompat.Medium"-->
+<!--            android:textColor="@color/navy_blue"-->
+
+<!--            android:visibility="gone" />-->
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewSimilar"
             android:layout_width="match_parent"
